@@ -2,18 +2,21 @@ package depaul.csc452.group2.campusconnect.repo;
 
 import depaul.csc452.group2.campusconnect.model.Student;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Disabled;
+
 import org.junit.jupiter.api.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Suite;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.data.mongo.DataMongoTest;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 
 @DataMongoTest
-class RepositoryTest {
+public
+class StudentRepositoryTest {
     @Autowired
     private StudentRepository underTest;
 
@@ -21,7 +24,7 @@ class RepositoryTest {
     void checkSelectByEmail() {
         //given
         String email = "jingyu120@gmail.com";
-        Student student = new Student("Justin", email, Arrays.asList(), "MALE");
+        Student student = new Student("Justin", email, List.of(), "MALE");
         underTest.save(student);
         //when
         Student resultStudent = underTest.findByEmail(email);
@@ -40,8 +43,8 @@ class RepositoryTest {
 
     @Test
     void checkExistByEmail() {
-        String email = "jingyu120";
-        Student student = new Student("Justin", email, Arrays.asList(), "MALE");
+        String email = "jingyu120@gmail.com";
+        Student student = new Student("Justin", email, List.of(), "MALE");
         underTest.save(student);
         boolean expected = underTest.existsByEmail(email);
         assertThat(expected).isTrue();
