@@ -2,6 +2,7 @@ package depaul.csc452.group2.campusconnect.service;
 
 import depaul.csc452.group2.campusconnect.exceptions.BadRequestException;
 import depaul.csc452.group2.campusconnect.exceptions.StudentNotFoundException;
+import depaul.csc452.group2.campusconnect.model.Course;
 import depaul.csc452.group2.campusconnect.model.Student;
 import depaul.csc452.group2.campusconnect.repo.StudentRepository;
 import org.junit.jupiter.api.BeforeEach;
@@ -11,8 +12,10 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
@@ -24,6 +27,7 @@ import static org.mockito.Mockito.verify;
 import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
+public
 class StudentServiceTest {
     @Mock
     private StudentRepository studentRepository;
@@ -36,9 +40,7 @@ class StudentServiceTest {
 
     @Test
     void canGetAllStudents() {
-        // when
         studentService.getAllStudents();
-        // then
         verify(studentRepository).findAll();
     }
 
@@ -50,9 +52,12 @@ class StudentServiceTest {
     }
 
     @Test
-    void canAddStudent() {
-        Student student = new Student("Justin", "jingyu120@gmail.com", Arrays.asList(), "MALE");
-        studentService.addStudent(student);
+    void checkSaveStudent() {
+        String email = "jingyu120@gmail.com";
+        Student student = new Student("Justin", email, List.of(), "MALE");
+
+        studentService.saveStudent(student);
+        verify(studentRepository).save(student);
         ArgumentCaptor<Student> studentArgumentCaptor = ArgumentCaptor.forClass(Student.class);
         verify(studentRepository).save(studentArgumentCaptor.capture());
         Student capturedStudent = studentArgumentCaptor.getValue();
@@ -60,9 +65,21 @@ class StudentServiceTest {
     }
 
     @Test
+    void canAddStudent() {
+        Student student = new Student("Justin", "jingyu120@gmail.com", List.of(), "MALE");
+        studentService.addStudent(student);
+        verify(studentRepository).save(student);
+        ArgumentCaptor<Student> studentArgumentCaptor = ArgumentCaptor.forClass(Student.class);
+        verify(studentRepository).save(studentArgumentCaptor.capture());
+        Student capturedStudent = studentArgumentCaptor.getValue();
+        assertEquals(capturedStudent, student);
+    }
+
+
+    @Test
     void willThrowWhenEmailTaken() {
         String email = "jingyu120@gmail.com";
-        Student student = new Student("Justin", email, Arrays.asList(), "MALE");
+        Student student = new Student("Justin", email, List.of(), "MALE");
         given(studentRepository.existsByEmail(anyString()))
                 .willReturn(true);
         assertThatThrownBy(() -> studentService.addStudent(student))
@@ -98,7 +115,7 @@ class StudentServiceTest {
     void canFindStudentByID() {
         String id = "testing";
         String email = "jingyu120@gmail.com";
-        Student student = new Student("Justin", email, Arrays.asList(), "MALE");
+        Student student = new Student("Justin", email, List.of(), "MALE");
         given(studentRepository.findById(id)).willReturn(Optional.of(student));
         studentService.getStudentByID(id);
         verify(studentRepository).findById(id);
@@ -115,5 +132,24 @@ class StudentServiceTest {
                 .hasMessageContaining("Student not found for ID:" + id);
     }
 
+    @Test
+    void canDeleteCourseByID() {
+        String email = "jingyu120@gmail.com";
+        Course course = new Course(1L, "csc", 101, "intro to programming", "introduction");
+        Student student = new Student("Justin", email, List.of(course), "MALE");
 
+        given(studentRepository.findByEmail(email)).willReturn(student);
+        Collection<Course> courses = student.getCourses();
+        assertTrue(courses.contains(course));
+        List<Course> filteredCourses = courses.stream().filter(c -> c.getId() != course.getId()).collect(Collectors.toList());
+        assertTrue(filteredCourses.isEmpty());
+        student.setCourses(filteredCourses);
+        assertEquals(filteredCourses, student.getCourses());
+        studentService.deleteCourseByID(course.getId(), email);
+        verify(studentRepository).findByEmail(anyString());
+        ArgumentCaptor<Student> studentArgumentCaptor = ArgumentCaptor.forClass(Student.class);
+        verify(studentRepository).save(studentArgumentCaptor.capture());
+        Student capturedStudent = studentArgumentCaptor.getValue();
+        assertEquals(capturedStudent, student);
+    }
 }
